# PDF-Summary-AI-

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
docker/compose/: docker-compose.yml
docker/dockerfiles/: pdf_summary_ai.Dockerfile
entrypoints/: prod_entrypoint.sh
src/: main.py
src/api/v1/: __init__.py  pdf.py  pdf_summary.py
src/client/: openai.py
src/config/: base.py  config.py  openai.py  pdf.py  utils.py
src/core/: exceptions.py
src/core/models/: enums.py
src/core/schemas/: requests.py  responses.py
src/prompt/: system.py
src/services/pdf/: summary.py
src/system/: entry.py  middlewares.py  resources.py
