[project]
name = "pdf-summary-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "maks",email = "gmb333x2@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "dependency-injector (>=4.48.1,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "openai (>=1.103.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"


[tool.isort]
profile = "black"
multi_line_output=3
include_trailing_comma=true
line_length=79
lines_after_imports=2
lines_between_sections=1


[tool.black]
line-length = 79
target-version = ['py311']


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
